--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -1,12 +1,14 @@
 name: Deploy Documentation
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Python Unit Tests"]
+    types:
+      - completed
 
 jobs:
   deploy-docs:
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
